# moira

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  EVAL_LOG.md  LICENSE  NOTICE  README.md  deploy.sh  docker-compose.yml  package.json  roadmap.md  run.sh
backend/: .gitignore  pyproject.toml
backend/evaluation/: capture.py  rubric.py
backend/moira/: config.py  main.py  prompts.py  service_setup.py
backend/moira/api/: router.py  streaming.py
backend/moira/api/routes/: __init__.py  conversations.py  health.py  inference.py  metrics.py  settings.py  tools.py
backend/moira/embeddings/: interfaces.py  local.py
backend/moira/inference/: adapters.py  client.py  defaults.py  metrics.py  registry.py
backend/moira/models/: knowledge.py  state.py
backend/moira/persistence/: interfaces.py  write_queue.py
backend/moira/persistence/lancedb/: tool_embeddings.py
backend/moira/persistence/sqlite/: repos.py  schema.py
backend/moira/persistence/sqlite/migrations/: 001_initial.sql  002_workflow_runs.sql  003_rename_and_elapsed.sql  004_tools_catalog.sql  005_tool_refactor.sql  012_settings.sql  (+16 more)
backend/moira/resources/: banner.txt  prompts.md  seed_tools.sql
backend/moira/services/credentials/: __init__.py  credential_service.py  credential_types.py  secrets.py
backend/moira/services/settings/: definitions.py  settings_service.py
backend/moira/services/tool_ingestion/: auth_analyzer.py  spec_parser.py  spec_resolver.py  tool_provisioner.py
backend/moira/tools/: base.py  catalog.py  discovery.py  enrichment.py  executor.py  metrics.py  rest_tool.py  standard.py
backend/moira/tools/builtin/: calculator.py  date_time.py  recall_source.py  url_content.py  web_search.py
backend/moira/workflow/: active_run.py  budget.py  graph.py  run_manager.py
backend/moira/workflow/nodes/: _helpers.py  _helpers_deps.py  decomposition.py  evaluation.py  planning.py  report_generation.py  research.py  research_nodes.py  research_review.py  synthesis.py  tool_identification.py  verification.py
backend/moira_eval/: batch.py  capture.py  diff.py  invoke.py  judge.py  log.py  metrics.py  prompts.py  questions.py  result.py  rubric_general.py  rubric_pokemon.py  run.py
backend/moira_eval_tests/: test_evaluation_batch.py  test_evaluation_capture.py  test_evaluation_diff.py  test_evaluation_invoke.py  test_evaluation_judge.py  test_evaluation_log.py  test_evaluation_metrics.py  test_evaluation_questions.py  test_evaluation_rubric_general.py  test_evaluation_run.py
backend/tests/: _node_test_helpers.py  _tool_ingestion_helpers.py  conftest.py  test_api.py  test_auth_analyzer.py  test_budget.py  test_calculator.py  test_config_files.py  test_conversation_model_api.py  test_conversation_models.py  test_credentials.py  test_decomposition_node.py  test_enrichment.py  test_evaluation_fixtures.py  test_evaluation_node.py  test_graph.py  test_inference_adapters.py  test_inference_api.py  test_inference_metrics.py  test_inference_providers.py  test_ingest_api.py  test_integration.py  test_node_helpers.py  test_nodes.py  test_planning_node.py  test_prompts.py  test_recall_source_tool.py  test_registry.py  test_report_generation_node.py  test_repos.py  test_research_internals.py  test_research_node.py  test_research_recall_source.py  test_research_review_node.py  test_rest_tool.py  test_spec_parser.py  test_spec_resolver.py  test_static_serving.py  test_synthesis_node.py  test_tool_identification_node.py  (+8 more)
(+125 files in other folders)
