[project]
name = "moira-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "lancedb>=0.20",
    "sentence-transformers>=4.0",
    "torch>=2.0",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "trafilatura>=2.0",
    "cryptography>=48.0.1",
    "jsonschema>=4.23",
    "prance>=23",
    "openapi-spec-validator>=0.7",
    "pandas>=3.0.3",
]

[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["moira*", "moira_eval*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "sse-starlette>=2.0",
]

# CPU-only PyTorch index — drops ~1GB of CUDA binaries that the embedding
# model (all-MiniLM-L6-v2) does not need. macOS wheels are also available
# on this index, so local dev on Apple Silicon is unaffected.
#
# GPU override: edit the URL to a CUDA variant (e.g., cu124) or remove the
# [tool.uv.sources] mapping to fall back to PyPI's default wheel.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
